# Evo-AI

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEMO_GUIDE.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DEPLOY_BOTH_TO_RENDER.md  DEPLOY_NOW.md  EASY_DEPLOY.md  EVOLUTION_DEMO.md  GETTING_STARTED.md  LEGENDARY_ROADMAP.md  Makefile  NEON_SETUP.md  README.md  RENDER_DEPLOYMENT.md  RENDER_FRONTEND.md  START_NOW.md  TEST-API.bat  TEST_LOCALLY.md  VERCEL_DEPLOYMENT.md  docker-compose.yml  leetcode_destroyer.py  quick-start.md  quick_demo.py  railway.json  render.yaml  run_full_demo.py  see_evolution_now.py  start-backend.bat  start-frontend.bat  start.sh  start_backend_simple.py  test_asyncpg_direct.py  test_campaign.json  test_campaign.py  test_campaign_execution.py  test_db.py  test_live_platform.py  (+1 more)
backend/: .env.example  Dockerfile  README.md  alembic.ini  check_enum.py  init_db.py  pyproject.toml  requirements.txt  run.ps1  start.bat  start.ps1  start.sh  start_with_env.bat  test_simple.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_fix_schema.py  003_add_enums.py  004_convert_status_to_enum.py
backend/scripts/: leetcode_evolution_demo.py
backend/src/evo_ai/: __init__.py  config.py
backend/src/evo_ai/agents/: README.md  __init__.py  base.py
backend/src/evo_ai/agents/implementations/: __init__.py  orchestrator.py  planner.py  policy_maker.py  reporter.py  scorer.py  variant_generator.py
backend/src/evo_ai/agents/tools/: __init__.py  domain_query.py  evaluation.py  leetcode_integration.py  lineage.py
backend/src/evo_ai/api/: __init__.py  app.py  dependencies.py  schemas.py
backend/src/evo_ai/api/routers/: __init__.py  campaigns.py  evaluations.py  reports.py  rounds.py  tasks.py  variants.py
backend/src/evo_ai/domain/: __init__.py  exceptions.py
backend/src/evo_ai/domain/models/: __init__.py  agent_decision.py  campaign.py  evaluation.py  policy.py  report.py  round.py  variant.py
backend/src/evo_ai/domain/repositories/: __init__.py  agent_decision_repo.py  base.py  campaign_repo.py  policy_repo.py  round_repo.py  variant_repo.py
backend/src/evo_ai/infrastructure/: __init__.py
backend/src/evo_ai/infrastructure/cache/: __init__.py  redis_cache.py
backend/src/evo_ai/infrastructure/database/: __init__.py  connection.py  models.py
backend/src/evo_ai/infrastructure/database/repositories/: __init__.py  postgres_agent_decision_repo.py  postgres_campaign_repo.py  (+5 more)
backend/src/evo_ai/infrastructure/observability/: __init__.py  logging.py  metrics.py  tracing.py
backend/src/evo_ai/infrastructure/storage/: __init__.py  s3_client.py
backend/src/evo_ai/mcp/: __init__.py  base_server.py  database_server.py  filesystem_server.py  github_server.py  registry.py  web_server.py
backend/src/evo_ai/tasks/: __init__.py  campaign_tasks.py  job_tracker.py  ray_config.py
backend/tests/: conftest.py
backend/tests/test_agents/: test_planner_agent.py
backend/tests/unit/agents/: test_base_agent.py  test_implementations.py
backend/tests/unit/api/: test_app.py
backend/tests/unit/domain/: test_campaign.py  test_policy.py  test_round.py  test_variant.py
backend/tests/unit/tasks/: __init__.py  test_job_tracker.py
(+39 files in other folders)
