[tool.poetry]
name = "evo-ai"
version = "1.0.0"
description = "LTEE-inspired Experimental Evolution Platform"
authors = ["Oluwafemi Idiakhoa"]
readme = "README.md"
packages = [{include = "evo_ai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Web Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"

# Database
sqlmodel = "^0.0.14"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"

# Data Validation
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"

# AI / Agents
openai = "^1.10.0"
anthropic = "^0.8.0"

# Task Queue
ray = {extras = ["default"], version = "^2.9.0"}

# Caching
redis = "^5.0.1"

# Storage
boto3 = "^1.34.0"
minio = "^7.2.0"

# Observability
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
opentelemetry-instrumentation-sqlalchemy = "^0.43b0"
opentelemetry-instrumentation-redis = "^0.43b0"
opentelemetry-exporter-otlp = "^1.22.0"
structlog = "^24.1.0"
prometheus-client = "^0.19.0"

# Utilities
python-dotenv = "^1.0.0"
httpx = "^0.26.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sse-starlette = "^2.0.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx = "^0.26.0"

# Linting & Formatting
ruff = "^0.1.14"
mypy = "^1.8.0"
black = "^24.1.0"

# Type Stubs
types-redis = "^4.6.0"
types-passlib = "^1.7.7"
types-python-jose = "^3.3.4"
sqlalchemy = {extras = ["mypy"], version = "^2.0.25"}

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = [
    "ray.*",
    "minio.*",
    "sse_starlette.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=evo_ai --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/evo_ai"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
